delivery: phase1 without handling notes.